loco-gen/tests/templates/snapshots/generate[kamal_dockerignore_sqlite_with_background_queue]@deployment.snap
---
source: loco-gen/tests/templates/deployment.rs
expression: "fs::read_to_string(tree_fs.root.join(\".dockerignore\")).expect(\".dockerignore missing\")"
---
target
dockerfile
.dockerignore
.git
.gitignore
