loco-gen/tests/templates/snapshots/generate[migration_file]@create_join_table_without_tz_migration.snap
---
source: loco-gen/tests/templates/migration.rs
expression: "fs::read_to_string(&migration_file).expect(\"Failed to read the migration file\")"
---
use loco_rs::schema::*;
use sea_orm_migration::prelude::*;

#[derive(DeriveMigrationName)]
pub struct Migration;

#[async_trait::async_trait]
impl MigrationTrait for Migration {
    async fn up(&self, m: &SchemaManager) -> Result<(), DbErr> {
        create_join_table_without_timestamps(m, "user_groups",
            &[
            ("count", ColType::BigIntegerNull),
            ],
            &[
            ("user", ""),
            ("group", ""),
            ]
        ).await
    }

    async fn down(&self, m: &SchemaManager) -> Result<(), DbErr> {
        drop_table(m, "user_groups").await
    }
}
